# ishtar

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/qml/: Main.qml
app/sources/: main.cpp
common/: defs.h  point.h  point.hpp  utils.h
core/: CMakeLists.txt
core/sources/classification/: classification_traits.h  classifier.cpp  classifier.h  classifier_hash_loader.cpp  classifier_hash_loader.h  classifier_serializer.cpp  classifier_serializer.h
core/sources/situation/: bounding_box.cpp  bounding_box.h  excodes.h  geometry.cpp  geometry.h  i_situation_object.cpp  i_situation_object.h  layer.cpp  layer.h  map.cpp  node.cpp  node.h  point.cpp  point.h  situation_layer.cpp  situation_layer.h  situation_map.cpp  situation_map.h  situation_object.cpp  situation_object.h  situation_traits.h
core/sources/situation/node_serializer/: i_node_serializer.cpp  i_node_serializer.h  json_node_serialiser.cpp  json_node_serialiser.h  json_node_serializer.cpp  json_node_serializer.h
core/sources/situation/node_serializer/parsers/: json_geometry_parser.cpp  json_geometry_parser.h
core/sources/situation/objects/: area_situation_object.cpp  area_situation_object.h
core/sources/situation_map/: situation_map.cpp  situation_map.h
presentation/: CMakeLists.txt
presentation/source/view_items/: situation_node_view_item.cpp  situation_node_view_item.h
presentation/sources/drawers/situation_node_drawer/: i_situation_node_drawer.cpp  i_situation_node_drawer.h  situation_node_drawer_qpainter.cpp  situation_node_drawer_qpainter.h
presentation/sources/drawers/situation_node_drawer/draw_objects/: draw_object_qpainter.cpp  draw_object_qpainter.h
presentation/sources/presenters/: situation_node_presenter.cpp  situation_node_presenter.h
presentation/sources/view_items/: situation_node_view_item.cpp  situation_node_view_item.h
presentation/sources/views/situation_node_view/: i_situation_node_view.cpp  i_situation_node_view.h  situation_node_view_qquick_item3d.cpp  situation_node_view_qquick_item3d.h  situation_view_qquick_painted_item.cpp  situation_view_qquick_painted_item.h
presentation/sources/views/situation_node_view/geometry_parsers/: draw_path_geometry_parser.cpp  draw_path_geometry_parser.h
result/: example.geojson  example.json
result/tests/: test.geojson  test.json
tests/core/: CMakeLists.txt  core_tests.cpp
tests/core/unit_tests/classification/: classifier_serializer_test.cpp  classifier_serializer_test.h  classifier_test.cpp  classifier_test.h
tests/core/unit_tests/classifier/: classifier_test.cpp  classifier_test.h
tests/core/unit_tests/situation/: bounding_box_test.cpp  bounding_box_test.h  geometry_test.cpp  geometry_test.h  json_serializer_test.cpp  json_serializer_test.h  layer_test.cpp  layer_test.h  map_test.cpp  map_test.h  node_test.cpp  node_test.h  situation_layer_test.cpp  situation_layer_test.h  situation_map_test.cpp  situation_map_test.h
